menu font resize in rem, annoying overflow bug

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -31,11 +31,11 @@
   text-decoration: none;
   border-bottom: 0;
   font-weight: normal;
-  font-size: 16px; /* TODO: rem */
+  font-size: 1rem;
   min-width: 40%;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 980px) {
   .header__content { 
     padding: 0.5rem 1rem;
     height: auto;
