--- a/src/components/LanguageSelector/languageSelector.css
+++ b/src/components/LanguageSelector/languageSelector.css
@@ -12,7 +12,7 @@
   font-size: 16px; /* TODO: rem */
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 980px) {
   .language-selector {
     padding: 1rem;
     display: inline-block;
